syntax = "proto3";

package proto;

option go_package = "github.com/NoobyTheTurtle/metrics/proto";

enum MetricType {
  METRIC_TYPE_UNSPECIFIED = 0;
  METRIC_TYPE_GAUGE = 1;
  METRIC_TYPE_COUNTER = 2;
}

message Metric {
  string id = 1;

  MetricType type = 2;

  oneof value {
    double gauge_value = 3;
    int64 counter_delta = 4;
  }
}

message UpdateMetricRequest {
  Metric metric = 1;
}

message UpdateMetricResponse {
  Metric metric = 1;
}

message UpdateMetricsRequest {
  repeated Metric metrics = 1;
}

message UpdateMetricsResponse {
}

message GetMetricRequest {
  string id = 1;

  MetricType type = 2;
}

message GetMetricResponse {
  Metric metric = 1;
}

message PingRequest {
}

message PingResponse {
}

service MetricsService {
  rpc UpdateMetric(UpdateMetricRequest) returns (UpdateMetricResponse);

  rpc UpdateMetrics(UpdateMetricsRequest) returns (UpdateMetricsResponse);

  rpc GetMetric(GetMetricRequest) returns (GetMetricResponse);

  rpc Ping(PingRequest) returns (PingResponse);
}